<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
		<EditText
		    android:id="@+id/email_recipient"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/email_recipient" 
		    android:inputType="textEmailAddress"/>
		
		<EditText
		    android:id="@+id/email_subject"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/email_subject" 
		    android:inputType="text"/>
		
		<HorizontalScrollView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content">
		    
		    <EditText
		        android:id="@+id/email_message"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:hint="@string/email_message" />
		
		</HorizontalScrollView>
		    
		<Button android:id="@+id/button_attach_grades"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_attach_grades" />
		
		<Button android:id="@+id/send_email"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_send" />
		
		<Button
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_cancel" 
		    android:onClick="cancelEmail" />
	</LinearLayout>
</ScrollView>