<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/tutorial_header" />
	
    <ListView android:id="@+id/tutorial_list"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp" >
    </ListView>
    
    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/course_header" />
	
    <ListView android:id="@+id/course_list"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="0dp" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="0dp" >
        
        <View
		    android:layout_width="match_parent"
		    android:layout_height="1dip"
		    android:layout_marginLeft="4dip"
		    android:layout_marginRight="4dip"
		    android:background="?android:attr/dividerVertical"
		    android:layout_alignParentTop="true" />
		
		<View
		    android:id="@+id/ViewColorPickerHelper"
		    android:layout_width="1dip"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_marginBottom="4dip"
		    android:layout_marginTop="4dip"
		    android:background="?android:attr/dividerVertical" 
		    android:layout_centerHorizontal="true" />
		
		<Button android:id="@+id/button_add"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentTop="true"
		    android:layout_toLeftOf="@id/ViewColorPickerHelper"
		    android:background="?android:attr/selectableItemBackground"
		    android:text="@string/button_add"
		    android:onClick="showAddTutorial" />
        
		<Button android:id="@+id/button_load_courses"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true"
		    android:layout_toRightOf="@id/ViewColorPickerHelper"
		    android:background="?android:attr/selectableItemBackground"
		    android:text="@string/button_load_courses"
		    android:onClick="loadCourses" />
		
		<View
		    android:layout_width="match_parent"
		    android:layout_height="1dip"
		    android:layout_marginLeft="4dip"
		    android:layout_marginRight="4dip"
		    android:background="?android:attr/dividerVertical"
		    android:layout_below="@id/button_add" />

		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentBottom="true"
		    android:layout_toLeftOf="@id/ViewColorPickerHelper"
		    android:layout_below="@id/button_add"
		    android:background="?android:attr/selectableItemBackground"
		    android:text="@string/button_email" 
		    android:onClick="showEmail" />
		
		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_toRightOf="@id/ViewColorPickerHelper"
		    android:layout_alignParentBottom="true"
		    android:background="?android:attr/selectableItemBackground"
		    android:text="@string/button_exit"
		    android:onClick="quitApp" />
		
    </RelativeLayout>
    
</LinearLayout>
